	- used dget_locked instead of direct increase of d_count
          it allows redirfs to run at kernel with openvz patches
	- added callbacks
		REDIRFS_DIR_IOP_UNLINK
		REDIRFS_DIR_IOP_RMDIR
		REDIRFS_REG_IOP_SETATTR
		REDIRFS_DIR_IOP_SETATTR
		REDIRFS_LNK_IOP_SETATTR
		REDIRFS_CHR_IOP_SETATTR
		REDIRFS_BLK_IOP_SETATTR
		REDIRFS_FIFO_IOP_SETATTR
		REDIRFS_SOCK_IOP_SETATTR
	- added might_sleep() macro into functions which can sleep
	- fixed locking in redirfs_get_path_id()
	- removed GFP_ATOMIC allocations where possible and added GFP_KERNEL
	  allocation fallbacks otherwise, BUG 14
	- better filter handle check in redirfs API, added IS_ERR check
	- fixed bind mount paths - two paths one root
	- added support for older kernels >= 2.6.16, thanks to Sergey Ivanov
	- cifs is not supported
	  the -EPERM error is returned when path is to be added within cifs

version 0.6
	* Frantisek Hrbata <frantisek.hrbata@redirfs.org>
	- fixed bug 13 - oops BUG at rfs_inode.c:306!

version 0.5
	* Frantisek Hrbata <frantisek.hrbata@redirfs.org>
	- fixed NULL pointer dereference in rfs_fsrename_set

version 0.4
	* Frantisek Hrbata <frantisek.hrbata@redirfs.org>
	- added support for private data - file, dentry, inode, redirfs root
	- introduced redirfs_root handle representing redirfs root object
	- simplified sysfs interface
	- small changes in the redirfs interface (not compatible with previous
	  versions)
	- redirfs_ctl control callbacks replaced with generic
	  redirfs_filter_operations table
	- fixed rinfo memory leak

version 0.3
	* Frantisek Hrbata <frantisek.hrbata@redirfs.org>
	- reflected changes in the permission function interface
	- fixed rdentry NULL dereference in rfs_fsrename
	- rfs_lookup adds only dirs while there are no registered filters

version 0.3-pre4
	* Frantisek Hrbata <frantisek.hrbata@redirfs.org>
	- reworked global rename handling
	- makefile cleanup

	* John Ogness <redirfs@ogness.net> 
	- fixed wrong reference usage in rfs_path_get

version 0.3-pre3