@@ -43,7 +43,7 @@
 	__ATTR(__name, __mode, __show, __store)
 
 enum redirfs_op_id {
-	/* REDIRFS_NONE_DOP_D_REVALIDATE, */
+	REDIRFS_NONE_DOP_D_REVALIDATE,
 	/* REDIRFS_NONE_DOP_D_HASH, */
 	REDIRFS_NONE_DOP_D_COMPARE,
 	/* REDIRFS_NONE_DOP_D_DELETE, */
@@ -51,7 +51,7 @@ enum redirfs_op_id {
 	REDIRFS_NONE_DOP_D_IPUT,
 	/* REDIRFS_NODE_DOP_D_NAME, */
 
-	/* REDIRFS_REG_DOP_D_REVALIDATE, */
+	REDIRFS_REG_DOP_D_REVALIDATE,
 	/* REDIRFS_REG_DOP_D_HASH, */
 	REDIRFS_REG_DOP_D_COMPARE,
 	/* REDIRFS_REG_DOP_D_DELETE, */
@@ -59,7 +59,7 @@ enum redirfs_op_id {
 	REDIRFS_REG_DOP_D_IPUT,
 	/* REDIRFS_REG_DOP_D_NAME, */
 
-	/* REDIRFS_DIR_DOP_D_REVALIDATE, */
+	REDIRFS_DIR_DOP_D_REVALIDATE,
 	/* REDIRFS_DIR_DOP_D_HASH, */
 	REDIRFS_DIR_DOP_D_COMPARE,
 	/* REDIRFS_DIR_DOP_D_DELETE, */
@@ -67,7 +67,7 @@ enum redirfs_op_id {
 	REDIRFS_DIR_DOP_D_IPUT,
 	/* REDIRFS_DIR_DOP_D_NAME, */
 
-	/* REDIRFS_CHR_DOP_D_REVALIDATE, */
+	REDIRFS_CHR_DOP_D_REVALIDATE,
 	/* REDIRFS_CHR_DOP_D_HASH, */
 	REDIRFS_CHR_DOP_D_COMPARE,
 	/* REDIRFS_CHR_DOP_D_DELETE, */
@@ -75,7 +75,7 @@ enum redirfs_op_id {
 	REDIRFS_CHR_DOP_D_IPUT,
 	/* REDIRFS_CHR_DOP_D_NAME, */
 
-	/* REDIRFS_BLK_DOP_D_REVALIDATE, */
+	REDIRFS_BLK_DOP_D_REVALIDATE,
 	/* REDIRFS_BLK_DOP_D_HASH, */
 	REDIRFS_BLK_DOP_D_COMPARE,
 	/* REDIRFS_BLK_DOP_D_DELETE, */
@@ -83,7 +83,7 @@ enum redirfs_op_id {
 	REDIRFS_BLK_DOP_D_IPUT,
 	/* REDIRFS_BLK_DOP_D_NAME, */
 
-	/* REDIRFS_FIFO_DOP_D_REVALIDATE, */
+	REDIRFS_FIFO_DOP_D_REVALIDATE,
 	/* REDIRFS_FIFO_DOP_D_HASH, */
 	REDIRFS_FIFO_DOP_D_COMPARE,
 	/* REDIRFS_FIFO_DOP_D_DELETE, */
@@ -91,7 +91,7 @@ enum redirfs_op_id {
 	REDIRFS_FIFO_DOP_D_IPUT,
 	/* REDIRFS_FIFO_DOP_D_NAME, */
 
-	/* REDIRFS_LNK_DOP_D_REVALIDATE, */
+	REDIRFS_LNK_DOP_D_REVALIDATE,
 	/* REDIRFS_LNK_DOP_D_HASH, */
 	REDIRFS_LNK_DOP_D_COMPARE,
 	/* REDIRFS_LNK_DOP_D_DELETE, */
@@ -99,7 +99,7 @@ enum redirfs_op_id {
 	REDIRFS_LNK_DOP_D_IPUT,
 	/* REDIRFS_LNK_DOP_D_NAME, */
 
-	/* REDIRFS_SOCK_DOP_D_REVALIDATE, */
+	REDIRFS_SOCK_DOP_D_REVALIDATE,
 	/* REDIRFS_SOCK_DOP_D_HASH, */
 	REDIRFS_SOCK_DOP_D_COMPARE,
 	/* REDIRFS_SOCK_DOP_D_DELETE, */
@@ -234,12 +234,10 @@ union redirfs_op_rv {
 };
 
 union redirfs_op_args {
-	/*
 	struct {
 		struct dentry *dentry;
 		struct nameidata *nd;
 	} d_revalidate;	
-	*/
 
 	/*
 	struct {
