@@ -12,6 +12,14 @@ version 0.7
 		REDIRFS_BLK_IOP_SETATTR
 		REDIRFS_FIFO_IOP_SETATTR
 		REDIRFS_SOCK_IOP_SETATTR
+		REDIRFS_NONE_DOP_D_REVALIDATE
+		REDIRFS_REG_DOP_D_REVALIDATE
+		REDIRFS_DIR_DOP_D_REVALIDATE
+		REDIRFS_CHR_DOP_D_REVALIDATE
+		REDIRFS_BLK_DOP_D_REVALIDATE
+		REDIRFS_FIFO_DOP_D_REVALIDATE
+		REDIRFS_LNK_DOP_D_REVALIDATE
+		REDIRFS_SOCK_DOP_D_REVALIDATE
 	- added might_sleep() macro into functions which can sleep
 	- fixed locking in redirfs_get_path_id()
 	- removed GFP_ATOMIC allocations where possible and added GFP_KERNEL
